# Mozzi-Old

./: .gitignore  AudioConfigAll.h  AudioConfigArmMBed.h  AudioConfigESP32.h  AudioConfigESP8266.h  AudioConfigHiSpeed14bitPwm.h  AudioConfigLINUX.h  AudioConfigRP2040.h  AudioConfigSAMD21.h  AudioConfigSTM32.h  AudioConfigStandard9bitPwm.h  AudioConfigStandardPlus.h  AudioConfigTeensy3_12bit.h  AudioOutput.h  AudioOutputLegacy.h  CMakeLists.txt  Mozzi.cpp  Mozzi.h  MozziGuts.cpp  MozziGuts.h  PlatformAVR.cpp  PlatformAVR.h  PlatformCommon.h  PlatformESP32_I2S.h  PlatformESP8266.h  PlatformLinuxPulseAudio.h  PlatformMBED.h  PlatformRP2040.h  PlatformRP2040_I2S.h  PlatformSAMD21.cpp  PlatformSAMD21.h  PlatformSTM32.cpp  PlatformSTM32.h  PlatformTeensy3.cpp  PlatformTeensy3.h  README.md  hardware_and_config.h  hardware_defines.h  mozzi_analog.cpp  mozzi_config.h  (+6 more)
examples/12.Misc/Stereo_Hack/: Stereo_Hack.ino
examples/12.Misc/Stereo_Hack_Pan/: Stereo_Hack_Pan.ino
examples/13.External_Audio_Output/PT8211_stereo_16bits/: PT8211_stereo_16bits.ino
examples/13.External_Audio_Output/PT8211_stereo_16bits_STM32_SPI2/: PT8211_stereo_16bits_STM32_SPI2.ino
examples/13.External_Audio_Output/Stereo_Pan_MCP4922_stereo_12bits/: Stereo_Pan_MCP4922_stereo_12bits.ino
extras/: NEWS.txt  PortingGuide.md
extras/doc/html/: 01_8_basics_2_vibrato_2_vibrato_8ino-example.html  02_8_control_2_control__echo__theremin_2_control__echo__theremin_8ino-example.html  02_8_control_2_control__tremelo_2_control__tremelo_8ino-example.html  02_8_control_2_event_delay_2_event_delay_8ino-example.html  02_8_control_2_metronome__sample_huffman_2_metronome__sample_huffman_8ino-example.html  03_8_sensors_2_knob__l_d_r_x2__wave_packet_2_knob__l_d_r_x2__wave_packet_8ino-example.html  05_8_control__filters_2_d_c_filter_2_d_c_filter_8ino-example.html  05_8_control__filters_2_smooth_2_smooth_8ino-example.html  05_8_control__filters_2_teensy__u_s_b__m_i_d_i_portamento_2_teensy__u_s_b__m_i_d_i_portamento_8ino-example.html  05_8_control__filters_2_thermistor__over_sample_2_thermistor__over_sample_8ino-example.html  06_8_synthesis_2_p_w_m__phasing_2_p_w_m__phasing_8ino-example.html  06_8_synthesis_2_wave_packet_2_wave_packet_8ino-example.html  06_8_synthesis_2_wave_packet__sample_2_wave_packet__sample_8ino-example.html  06_8_synthesis_2_wave_shaper_2_wave_shaper_8ino-example.html  07_8_envelopes_2_a_d_s_r__envelope_2_a_d_s_r__envelope_8ino-example.html  07_8_envelopes_2_ead__envelope_2_ead__envelope_8ino-example.html  07_8_envelopes_2_multi_line__envelope_2_multi_line__envelope_8ino-example.html  _a_d_s_r_8h_source.html  (+651 more)
extras/docker/: Dockerfile  docker-compose.yml  mozzi.ipynb
extras/doxygen-style/: Doxyfile
extras/linux/: README.md  example.cpp  main.cpp
(+64 files in other folders)
